--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
   width: 198px;
 }
 .nav-btn {
-  border-radius: 15px;
-  padding: 10px 10px;
+  border-radius: 25px;
+  padding: 7px 26px;
+}
+.navbar-toggler {
+  position: relative;
+  bottom: 37px;
+}
+.text-aline {
+  text-align: center;
 }
