--- a/style.css
+++ b/style.css
@@ -85,3 +85,24 @@ h2 {
   color: black;
   font-weight: 700;
 }
+footer {
+  background-color: #282531;
+  color: white;
+}
+.footer {
+  padding: 80px 0px;
+  cursor: pointer;
+}
+.footer li {
+  list-style: none;
+  padding: 0;
+}
+.footer ul {
+  padding: 0;
+}
+.footer .col-md-3 {
+  margin: 0 32px;
+}
+footer small {
+  text-align: center;
+}
